feat: update attributes in user, pet owner and veterinarian